--- a/MLR_PCA.ipynb
+++ b/MLR_PCA.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import Dataset\n",
+    "#import libraries \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
