--- a/MLR_PCA.ipynb
+++ b/MLR_PCA.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import libraries \n",
+    "#importing libraries \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#importing Datasets \n",
     "data = pd.read_csv('insurance.csv')\n",
     "data.head()"
    ]
